data/derived/comb/progs/unify/prog2134.ml.out
Characters 22-27:
  let _ = List.combine ([1;3] [2;4])
                        ^^^^^
Error: This expression has type int list
       This is not a function; it cannot be applied.
